--- a/depot/app/views/carts/show.html.erb
+++ b/depot/app/views/carts/show.html.erb
@@ -1,9 +1,17 @@
-<h2>Your Pragmatic Cart</h2>
-<ul>
+<div class="cart_title">Your Cart</div>
+<table>
 	<% @cart.line_items.each do |item| %>
-	<li> <%= item.product.title %> </li>
+	<tr>
+		<td><%= item.quantity %>&times;</td>
+		<td><%= item.product.title %></td>
+		<td class="item_price"><%= number_to_currency(item.total_price) %></td>
+		<td><%= button_to 'Remove', item , :method => :delete %></td>
+	</tr>
 	<% end %>
-</ul>
-
-<%= link_to 'Edit', edit_cart_path(@cart) %> |
+	<tr class="total_line">
+		<td colspan="2">Total</td>
+		<td class="total_cell"><%= number_to_currency(@cart.total_price) %></td>
+	</tr>
+</table>
 <%= link_to 'Back', store_path %>
+<%= button_to 'Empty cart', @cart, :method => :delete, :confirm => 'Are you sure?' %>
