--- a/depot/app/views/store/index.html.erb
+++ b/depot/app/views/store/index.html.erb
@@ -15,14 +15,14 @@
 <% @products.each do |product| %>
 	<div class="entry">
 		<!-- <h2>TEST</h2>	 -->
-		<%= link_to(line_items_path(:product_id => product), method: :post) do %>
-		<%= image_tag(product.image_url) %>
+		<%= link_to(line_items_path(:product_id => product), method: :post, :remote => true ) do %>
+			<%= image_tag(product.image_url) %>
 		<% end %>
 		<h3 style="color:Red" ><%= product.title %></h3>
 		<%= sanitize(product.description) %>
 		<div class="price_line">
 			<span class="price"><%= number_to_currency(product.price) %></span>
-			<%= button_to 'Add to Cart', line_items_path(:product_id => product) %>
+			<%= button_to 'Add to Cart', line_items_path(:product_id => product), :remote => true %>
 		</div>
 	</div>
 <% end %>
