fix ajax testing, add item decrement btn

--- a/depot/app/views/carts/_cart.html.erb
+++ b/depot/app/views/carts/_cart.html.erb
@@ -1,4 +1,3 @@
-<% if cart.line_items.any? %>
 <div class="cart_title">Your Cart</div>
 <table>
 	<%= render(cart.line_items) %>
@@ -7,6 +6,5 @@
 		<td class="total_cell"><%= number_to_currency(@cart.total_price) %></td>
 	</tr>
 </table>
-<%= link_to 'Back', store_path %>
+<!-- <%= link_to 'Back', store_path %>-->
 <%= button_to 'Empty cart', cart, :method => :delete, :confirm => 'Are you sure?' %>
-<% end %>
