--- a/depot/app/views/line_items/_form.html.erb
+++ b/depot/app/views/line_items/_form.html.erb
@@ -21,6 +21,11 @@
     <%= f.number_field :cart_id %>
   </div>
 
+  <div class="field">
+    <%= f.label :quantity %>
+    <%= f.number_field :quantity %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
