--- a/depot/app/views/layouts/application.html.erb
+++ b/depot/app/views/layouts/application.html.erb
@@ -16,10 +16,15 @@
 	<div id="columns">
 		<div id="side">
 			<div id="cart">
-				<%= render @cart %>
+			<% if @cart %>
+				<%= hidden_div_if(@cart.line_items.empty?, :id => "cart") do %>
+					<%= render @cart %>
+				<% end %>
+			<% end %>
 			</div>
 			
-			<a href="http://www....">Home</a><br />
+			<%= link_to 'Home', store_path %><br />
+			<%= link_to 'Products', Product %><br />
 			<a href="http://www..../faq">Questions</a><br />
 			<a href="http://www..../news">News</a><br />
 			<a href="http://www..../contact">Contact</a><br />
