--- a/depot/app/views/line_items/_line_item.html.erb
+++ b/depot/app/views/line_items/_line_item.html.erb
@@ -3,8 +3,11 @@
 <% else %>
 <tr>
 <% end %>
+	<td>
+		<%= link_to("<", decrement_line_item_url(line_item), method: :put, remote: :true) %>
+	</td>
 	<td><%= line_item.quantity %>&times;</td>
-	<td><%= line_item.product.title %></td>
+	<td><%= if line_item.product then line_item.product.title end %></td>
 	<td class="item_price"><%= number_to_currency(line_item.total_price) %></td>
 	<td><%= button_to 'Remove', line_item , :method => :delete %></td>
 </tr>
