--- a/depot/app/views/line_items/_line_item.html.erb
+++ b/depot/app/views/line_items/_line_item.html.erb
@@ -4,10 +4,13 @@
 <tr>
 <% end %>
 	<td>
-		<%= link_to("<", decrement_line_item_url(line_item), method: :put, remote: :true) %>
+		<%= link_to("<", decrement_line_item_url(line_item), method: :put, remote: true) %>
+	</td>
+	<td>
+		<%= link_to(">", line_items_path(:product_id => line_item.product), method: :post, :remote => true) %>
 	</td>
 	<td><%= line_item.quantity %>&times;</td>
 	<td><%= if line_item.product then line_item.product.title end %></td>
 	<td class="item_price"><%= number_to_currency(line_item.total_price) %></td>
-	<td><%= button_to 'Remove', line_item , :method => :delete %></td>
+	<td><%= button_to 'Remove', line_item , :method => :delete, :remote => true %></td>
 </tr>
